# stack-vec

./: 3  Cargo.toml  README.md
src/: iter.rs  lib.rs  macros.rs  tests.rs
tests/: msrv.rs
