[package]
name = "stack_vec"
description = "Vector-like data structure located on the stack"
authors = ["Sebastian Wojciechowski"]
version = "0.1.0"
edition = "2018"
rust-version = "1.51.0" # stabilized const generics
keywords = ["vec", "vector", "stack"]
repository = "https://github.com/joo-was-already-taken/stack-vec.git"
readme = "README.md"

[dependencies]
rustversion = "1.0.17"
